k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-app
spec:
  selector:
    matchLabels:
      app: comments-app
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: comments-app
    spec:
      containers:
      - name: comments-app
        # image: 00000000000000.dkr.ecr.my-region.amazonaws.com/example-eks:tag
        # image: REGISTRY/REPO:TAG
        image: app-image
        ports:
          - containerPort: 5000
        resources:
          requests:
            memory: "64Mi"
            cpu: "128m"
          limits: 
            memory: "128Mi"
            cpu: "256m"
