k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-app-service
  annotations:
    scrape: "true"
spec:
  selector:
    app: comments-app
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
