k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comments-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: challange.danieloliveira.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: comments-app-service
                port:
                  number: 5000
